Merge invoice-management