@@ -13,8 +13,9 @@ import javax.swing.border.EmptyBorder;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.net.URL;
+import java.text.NumberFormat;
 import java.util.List;
+import java.util.Locale;
 
 @SuppressWarnings("serial")
 public class MenuList_UI extends JFrame implements ActionListener {
@@ -33,10 +34,13 @@ public class MenuList_UI extends JFrame implements ActionListener {
     private JButton btnSearch;
     private JTextField txtSearch;
     private JPanel pnlProductGrid;
-    private java.util.List<entity.Mon> originalList;
+    private List<entity.Mon> originalList;
     private JButton activeTab; 
+    private JButton btnAll;
 
     private Mon_DAO mon_dao = new Mon_DAO();
+    @SuppressWarnings("deprecation")
+	private final NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(new Locale("vi", "VN"));
 
     public MenuList_UI() {
         setTitle("Espresso Menu Browser - Pure Java Optimized");
@@ -120,7 +124,7 @@ public class MenuList_UI extends JFrame implements ActionListener {
         JPanel pnlTabs = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 10));
         pnlTabs.setOpaque(false);
         
-        JButton btnAll = createTabButton("All", true);
+        btnAll = createTabButton("All", true);
         activeTab = btnAll;
         btnAll.addActionListener(e -> filterMenu(null, btnAll));
         pnlTabs.add(btnAll);	
@@ -160,9 +164,8 @@ public class MenuList_UI extends JFrame implements ActionListener {
 
         btnSearch.addActionListener(this);
     }
-
-    @SuppressWarnings("deprecation")
-	private JPanel createProductCard(String maMon, String name, String desc, String price, Color bg, Color brown, Color gray, String imagePath) {
+    
+    private JPanel createProductCard(String maMon, String name, String desc, String price, Color bg, Color brown, Color gray, String imagePath) {
         JPanel pnlCard = new JPanel(new BorderLayout());
         pnlCard.setPreferredSize(new Dimension(230, 255));
         pnlCard.setMaximumSize(new Dimension(230, 255));
@@ -174,18 +177,14 @@ public class MenuList_UI extends JFrame implements ActionListener {
         lblImgPlaceholder.setOpaque(true);
         lblImgPlaceholder.setBackground(Color.decode("#EEEEEE"));
         try {
-            
             String urlString = imagePath; 
-            
             if (urlString != null && !urlString.isEmpty()) {
-                URL url = new URL(urlString);
-                
-                Image img = javax.imageio.ImageIO.read(url);
-                
+            	java.net.URL url = new java.net.URI(imagePath).toURL(); 
+            	Image img = javax.imageio.ImageIO.read(url);
                 if (img != null) {
                     Image scaledImg = img.getScaledInstance(250, -1, Image.SCALE_SMOOTH);
                     lblImgPlaceholder.setIcon(new ImageIcon(scaledImg));
-                    lblImgPlaceholder.setText(""); // Xóa text nếu load thành công
+                    lblImgPlaceholder.setText(""); 
                 } else {
                   lblImgPlaceholder.setText("No Image");
                 }
@@ -237,7 +236,6 @@ public class MenuList_UI extends JFrame implements ActionListener {
         lblPrice.setForeground(brown);
         lblPrice.setFont(new Font("Inter", Font.BOLD, 16));
         pnlBottomInfo.add(lblPrice, BorderLayout.WEST);
-
 
         pnlDetails.add(pnlBottomInfo);
 
@@ -315,8 +313,8 @@ public class MenuList_UI extends JFrame implements ActionListener {
 }
     
     public void renderMenu() {
-        originalList = mon_dao.getAll(); // Tải dữ liệu 1 lần duy nhất
-        displayFilteredList(originalList); // Hiển thị toàn bộ
+        originalList = mon_dao.getAll(); 
+        displayFilteredList(originalList); 
     }
 
     private JButton createMenuButton(String text, String iconPath) {
@@ -333,21 +331,6 @@ public class MenuList_UI extends JFrame implements ActionListener {
         btn.setForeground(new Color(85, 55, 34));
         btn.setFont(new Font("Segoe UI", Font.PLAIN, 14));
         return btn;
-    }
-
-    public void renderMenu1() {
-        pnlProductGrid.removeAll();
-        java.util.List<entity.Mon> listMon = mon_dao.getAll();
-        for (entity.Mon m : listMon) {
-            JPanel card = createProductCard(
-                m.getMaMon(), m.getTenMon(), m.getMoTaMon(),
-                String.format("$%.2f", m.getDonGiaBan()), 
-                bgCard, accentBrown, textGray, m.getDuongDanAnh()
-            );
-            pnlProductGrid.add(card);
-        }
-        pnlProductGrid.revalidate();
-        pnlProductGrid.repaint();
     }
     
     private JButton createTabButton(String text, boolean isSelected) {
@@ -388,22 +371,21 @@ public class MenuList_UI extends JFrame implements ActionListener {
         updateTabStyle(clickedTab, true);
         activeTab = clickedTab;
         
-
         if (loai == null) {
             displayFilteredList(originalList);
         } else {
-            java.util.List<entity.Mon> filtered = originalList.stream()
+            List<entity.Mon> filtered = originalList.stream()
                     .filter(m -> m.getPhanLoaiMonAn().equals(loai)) 
                     .toList();
             displayFilteredList(filtered);
         }
     }
-    private void displayFilteredList(java.util.List<entity.Mon> list) {
+    private void displayFilteredList(List<entity.Mon> list) {
         pnlProductGrid.removeAll();
         for (entity.Mon m : list) {
             JPanel card = createProductCard(
                 m.getMaMon(), m.getTenMon(), m.getMoTaMon(),
-                String.format("$%.2f", m.getDonGiaBan()), 
+                currencyFormatter.format(m.getDonGiaBan()), 
                 bgCard, accentBrown, textGray, m.getDuongDanAnh()
             );
             pnlProductGrid.add(card);
@@ -433,6 +415,12 @@ public class MenuList_UI extends JFrame implements ActionListener {
     	}
     }
     private void searchMenu(String keyword) {
+        if (activeTab != btnAll) {
+            updateTabStyle(activeTab, false);
+            activeTab = btnAll;
+            updateTabStyle(activeTab, true);
+        }
+
         pnlProductGrid.removeAll();
         List<Mon> allMon = mon_dao.getAll();
         if (keyword.isEmpty()) {
@@ -443,7 +431,7 @@ public class MenuList_UI extends JFrame implements ActionListener {
             if (m.getMaMon().equalsIgnoreCase(keyword) || m.getTenMon().toLowerCase().contains(keyword.toLowerCase())) {
                 JPanel card = createProductCard(
                     m.getMaMon(), m.getTenMon(), m.getMoTaMon(),
-                    String.format("$%.2f", m.getDonGiaBan()), bgCard, accentBrown, textGray, m.getDuongDanAnh()
+                    currencyFormatter.format(m.getDonGiaBan()), bgCard, accentBrown, textGray, m.getDuongDanAnh()
                 );
                 pnlProductGrid.add(card);
             }
